--- a/CollectorsFrontEnd/Views/StoreFrontMain.xaml
+++ b/CollectorsFrontEnd/Views/StoreFrontMain.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="CollectorsFrontEnd.Interfaces.StoreFrontMain"
+﻿<Window x:Class="CollectorsFrontEnd.Views.StoreFrontMain"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CollectorsFrontEnd.Interfaces"
+        xmlns:local="clr-namespace:CollectorsFrontEnd.Views"
         mc:Ignorable="d"
         Title="Storefront Pro" Height="480" Width="620">
     <Grid>
