More threading stuff. Card/Collection Model Rewrite Incomming.

--- a/CollectorsFrontEnd/Views/ViewComponents/VCCollectionsMenuList.xaml
+++ b/CollectorsFrontEnd/Views/ViewComponents/VCCollectionsMenuList.xaml
@@ -21,6 +21,8 @@
             </Label>
         </Border>
         <ListBox
+                SelectedValue="{Binding SelectedCollection}"
+                SelectionChanged="eCollectionSelection_SelectionChanged"
                 Grid.Row="1" 
                 ItemsSource="{Binding AvailableCollections}"
                 VerticalAlignment="Stretch"/>
