--- a/StoreFrontPro/Views/Components/VCCollectionsMenuList.xaml
+++ b/StoreFrontPro/Views/Components/VCCollectionsMenuList.xaml
@@ -32,7 +32,7 @@
         <Button Grid.Row="3"  HorizontalAlignment="Stretch">
             <TextBlock>Add Collection</TextBlock>
         </Button>
-        <Button Grid.Row="4"  HorizontalAlignment="Stretch">
+        <Button Grid.Row="4"  HorizontalAlignment="Stretch" Command="{Binding ViewCollectionCommand}">
             <TextBlock>View Collection</TextBlock>
         </Button>
     </Grid>
