--- a/StoreFrontPro/Views/CollectionViews/Cube/VCardGroupDisplay.xaml
+++ b/StoreFrontPro/Views/CollectionViews/Cube/VCardGroupDisplay.xaml
@@ -3,10 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:StoreFrontPro.Views.CollectionViews.Cube"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <ItemsControl ItemsSource="{Binding CategoryGroups}" >
+             xmlns:local="clr-namespace:StoreFrontPro.Views.CollectionViews.Cube">
+    <ItemsControl ItemsSource="{Binding CategoryGroups}">
         <ItemsControl.ItemsPanel>
             <ItemsPanelTemplate>
                 <WrapPanel Orientation="Vertical"/>
