--- a/StoreFrontPro/StoreFrontMain.xaml
+++ b/StoreFrontPro/StoreFrontMain.xaml
@@ -15,7 +15,7 @@
         <ContentPresenter Grid.Row="1" Content="{Binding OperationWindow}"/>
         <DockPanel Grid.Row="0" >
             <Border BorderBrush="Black" BorderThickness="1">
-                <Menu DockPanel.Dock="Top" Height="20">
+                <Menu DockPanel.Dock="Top" Height="20" IsEnabled="{Binding MenuEnabled}">
                     <MenuItem Header="_File" Height="20">
                         <MenuItem Header="Collections Overview" Command="{Binding CollectionsOverviewCommand}"/>
                         <MenuItem Header="Download Latest Sets" Command="{Binding DownloadSetsCommand}"/>
