--- a/StoreFrontPro/Views/CollectionViews/Deckbox/VFancyCollectionList.xaml
+++ b/StoreFrontPro/Views/CollectionViews/Deckbox/VFancyCollectionList.xaml
@@ -5,11 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:StoreFrontPro.Views.CollectionViews.Deckbox"
              mc:Ignorable="d">
-    <ItemsControl ItemsSource="{Binding Cards}">
-        <ItemsControl.ItemsPanel>
-            <ItemsPanelTemplate>
-                <StackPanel Orientation="Vertical"/>
-            </ItemsPanelTemplate>
+   <ScrollViewer>
+      <ItemsControl ItemsSource="{Binding Cards}">
+      <ItemsControl.ItemsPanel>
+         <ItemsPanelTemplate>
+            <StackPanel Orientation="Vertical"/>
+         </ItemsPanelTemplate>
         </ItemsControl.ItemsPanel>
     </ItemsControl>
+
+   </ScrollViewer>
 </UserControl>
