Dock Added to Deckbox, not linked to usage yet.

--- a/StoreFrontPro/Views/CollectionViews/Deckbox/VCollectionDeckBox.xaml
+++ b/StoreFrontPro/Views/CollectionViews/Deckbox/VCollectionDeckBox.xaml
@@ -12,8 +12,11 @@
             <ColumnDefinition Width="5*"/>
         </Grid.ColumnDefinitions>
         <!-- When there are other things at the highest level that are VM tied, this is the binding needed. -->
-        <ContentPresenter 
+       <ContentPresenter 
+                Grid.Column="0" 
+                Content="{Binding CollectionDock}"/>
+      <ContentPresenter 
                 Grid.Column="1" 
                 Content="{Binding OperationWindow}"/>
-    </Grid>
+   </Grid>
 </UserControl>
