--- a/StoreFrontPro/Views/Interfaces/CardInterface/VCardChanger.xaml
+++ b/StoreFrontPro/Views/Interfaces/CardInterface/VCardChanger.xaml
@@ -8,13 +8,14 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
       <Grid.RowDefinitions>
-         <RowDefinition/>
          <RowDefinition Height="2*"/>
+         <RowDefinition/>
+         <RowDefinition Height="5*"/>
       </Grid.RowDefinitions>
       <Grid.ColumnDefinitions>
          <ColumnDefinition/>
       </Grid.ColumnDefinitions>
-      <Grid>
+      <Grid Grid.Row="0">
          <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition Width="2*"/>
@@ -28,6 +29,14 @@
                </ItemsControl.ItemsPanel>
             </ItemsControl>
          </ScrollViewer>
+      </Grid>
+      <Grid Grid.Row="1">
+         <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+         </Grid.ColumnDefinitions>
+         <Button Grid.Column="0" Content="Save" Command="{Binding SaveCommand}"/>
+         <Button Grid.Column="1" Content="Cancel" Command="{Binding CancelCommand}"/>
       </Grid>
    </Grid>
 </UserControl>
