--- a/StoreFrontPro/Views/Interfaces/CardInterface/VCardChanger.xaml
+++ b/StoreFrontPro/Views/Interfaces/CardInterface/VCardChanger.xaml
@@ -5,22 +5,21 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:StoreFrontPro.Views.Interfaces.CardInterface"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="200" d:DesignWidth="300">
     <Grid>
       <Grid.RowDefinitions>
-         <RowDefinition Height="2*"/>
-         <RowDefinition/>
-         <RowDefinition Height="5*"/>
+         <RowDefinition Height="*"/>
+         <RowDefinition Height="80"/>
+         <RowDefinition Height="24"/>
       </Grid.RowDefinitions>
       <Grid.ColumnDefinitions>
          <ColumnDefinition/>
       </Grid.ColumnDefinitions>
       <Grid Grid.Row="0">
          <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition />
          </Grid.ColumnDefinitions>
-         <ScrollViewer Grid.Column="1">
+         <ScrollViewer Grid.Column="0">
             <ItemsControl ItemsSource="{Binding IdentifyingAttributes}">
                <ItemsControl.ItemsPanel>
                   <ItemsPanelTemplate>
@@ -30,7 +29,8 @@
             </ItemsControl>
          </ScrollViewer>
       </Grid>
-      <Grid Grid.Row="1">
+      <ContentPresenter Grid.Row="1" Content="{Binding CopySelector}"/>
+      <Grid Grid.Row="2">
          <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
