Removed unused wpf lines

--- a/StoreFrontPro/Views/CollectionViews/Cube/VCardGroupDisplay.xaml
+++ b/StoreFrontPro/Views/CollectionViews/Cube/VCardGroupDisplay.xaml
@@ -8,7 +8,7 @@
         <ItemsControl ItemsSource="{Binding CategoryGroups}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <WrapPanel ScrollViewer.HorizontalScrollBarVisibility="Visible" Orientation="Vertical"/>
+                    <WrapPanel Orientation="Vertical"/>
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
         </ItemsControl>
